@@ -1,22 +1,24 @@
 Sketchy overview of the details:
 
-- gcc-3.x is probably required to compile this release, g++, too, as it
-  has been re-written in C++.
+- gcc-3.x is probably required to compile this release, g++-3.x, too, as it
+  has been re-written in C++ (and a corresponding version of libstdc++).
 
 - the options used in the ./reconf script should work. everything else
-  might be broken.
+  might work and might be broken.
 
 - wchar_t MUST be UNICODE or ISO-10646-1 on your system, or various things
   will break down. On GNU/Linux, this is true, on Solaris, this is true
   only for "@ucs" locales, but you should have plenty of them.
 
 - rxvt will use unicode internally, but does input/output in the current
-  locale. so get a utf-8 terminal, use "LC_CTYPE=en_US.UTF-8 rxvt" or
+  locale. so to get a utf-8 terminal, use "LC_CTYPE=en_US.UTF-8 rxvt" or
   equivalent.
 
 - you can specify a different locale to be used for your input method
   using the imLocale ressource or switch, e.g.:
   LC_CTYPE=ja_JP.UTF-8 rxvt -imlocale ja_JP.EUC-JP
+
+- keyboard input is limited by the selected X locale.
 
 - "-fn" commandline switch and *.font ressource accepts a comma
   seperated list of fontnames:
@@ -28,7 +30,8 @@ Sketchy overview of the details:
 
 - the _first_ font in the list selects the cell width/height. All other
   fonts must be smaller or same sized, or they will be ignored or worse.
-  xft fonts will automatically be rescaled.
+  xft fonts will automatically be rescaled, x11-fonts, too, if their
+  size is not specified in the XLFD.
 
 - the fonts will be tried in the order given when searching for a font
   to display a specific character. if you are e.g. mainly interested in
@@ -38,11 +41,18 @@ Sketchy overview of the details:
   font first (e.g. "9x15bold") and let rxvt sort it out.
 
 - xft fonts require gobs of memory and generally are slow. try not to
-  antialias them ("Font:antialias=false") when possible. Often looks better,
-  too.
+  antialias them ("Font:antialias=false") when possible. Often looks
+  better, too, as they then match other fonts in weight.
 
 - src/defaultfont.C lists the fallback fonts that are tried when a
   character cannot be displayed with the current list of fonts.
+
+- using bold fonts for the bold attribute is not supported by xft
+  and will not be supported by rxvt-unicode, either, even for normal x11
+  fonts.
+
+- normal bold text will use reverse video unless the colorBD resource has
+  been set. coloured text will use high-intensity colours for bold.
 
 Marc <rxvt@plan9.de>
 
